--- a/language/i18n_hr.json
+++ b/language/i18n_hr.json
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "Ne mogu se sakriti",
     "program_management_unable_to_hide_desc": "Ovo je zadnji vidljivi program i barem jedan program mora ostati vidljiv.",
     "CL_CF_FM_set_deadline": "Odredite rok",
-    "CL_CF_FM_expiry_date_must_be_selected": "Mora biti odabran datum isteka"
+    "CL_CF_FM_expiry_date_must_be_selected": "Mora biti odabran datum isteka",
+    "CL_CF_FM_add_custom_food_desc": "Dodajte novu prilagođenu stavku",
+    "CL_CF_FM_delete_selected_items": "Izbriši odabrane stavke",
+    "CL_CF_FM_delete_selected": "Izbriši odabrano"
 }
