--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "Жасыру мүмкін емес",
     "program_management_unable_to_hide_desc": "Бұл соңғы көрінетін бағдарлама және кем дегенде бір бағдарлама көрінетін болуы керек.",
     "CL_CF_FM_set_deadline": "Мерзімді белгілеңіз",
-    "CL_CF_FM_expiry_date_must_be_selected": "Жарамдылық мерзімін таңдау керек"
+    "CL_CF_FM_expiry_date_must_be_selected": "Жарамдылық мерзімін таңдау керек",
+    "CL_CF_FM_add_custom_food_desc": "Жаңа теңшелген элементті қосыңыз",
+    "CL_CF_FM_delete_selected_items": "Таңдалған элементтерді жою",
+    "CL_CF_FM_delete_selected": "Таңдалғанды ​​жою"
 }
