--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "Ni mogoče skriti",
     "program_management_unable_to_hide_desc": "To je zadnji viden program in vsaj en program mora ostati viden.",
     "CL_CF_FM_set_deadline": "Določite rok",
-    "CL_CF_FM_expiry_date_must_be_selected": "Izbrati je treba datum poteka"
+    "CL_CF_FM_expiry_date_must_be_selected": "Izbrati je treba datum poteka",
+    "CL_CF_FM_add_custom_food_desc": "Dodajte nov element po meri",
+    "CL_CF_FM_delete_selected_items": "Izbriši izbrane elemente",
+    "CL_CF_FM_delete_selected": "Izbriši izbrano"
 }
