--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "قادر به پنهان کردن نیست",
     "program_management_unable_to_hide_desc": "این آخرین برنامه قابل مشاهده است و حداقل یک برنامه باید قابل مشاهده باشد.",
     "CL_CF_FM_set_deadline": "یک ضرب الاجل تعیین کنید",
-    "CL_CF_FM_expiry_date_must_be_selected": "تاریخ انقضا باید انتخاب شود"
+    "CL_CF_FM_expiry_date_must_be_selected": "تاریخ انقضا باید انتخاب شود",
+    "CL_CF_FM_add_custom_food_desc": "یک مورد سفارشی جدید اضافه کنید",
+    "CL_CF_FM_delete_selected_items": "موارد انتخاب شده را حذف کنید",
+    "CL_CF_FM_delete_selected": "حذف انتخاب شده"
 }
