--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "לא מצליח להסתיר",
     "program_management_unable_to_hide_desc": "זוהי התוכנית הגלויה האחרונה ולפחות תוכנית אחת חייבת להיות גלויה.",
     "CL_CF_FM_set_deadline": "קבע תאריך יעד",
-    "CL_CF_FM_expiry_date_must_be_selected": "יש לבחור תאריך תפוגה"
+    "CL_CF_FM_expiry_date_must_be_selected": "יש לבחור תאריך תפוגה",
+    "CL_CF_FM_add_custom_food_desc": "הוסף פריט מותאם אישית חדש",
+    "CL_CF_FM_delete_selected_items": "מחק פריטים נבחרים",
+    "CL_CF_FM_delete_selected": "מחק את נבחרות"
 }
