--- a/language/i18n_ro.json
+++ b/language/i18n_ro.json
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "Nu se poate ascunde",
     "program_management_unable_to_hide_desc": "Acesta este ultimul program vizibil și cel puțin un program trebuie menținut vizibil.",
     "CL_CF_FM_set_deadline": "Stabiliți un termen limită",
-    "CL_CF_FM_expiry_date_must_be_selected": "Trebuie selectată data de expirare"
+    "CL_CF_FM_expiry_date_must_be_selected": "Trebuie selectată data de expirare",
+    "CL_CF_FM_add_custom_food_desc": "Adăugați un nou articol personalizat",
+    "CL_CF_FM_delete_selected_items": "Ștergeți elementele selectate",
+    "CL_CF_FM_delete_selected": "Ștergeți selectat"
 }
