--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "Неможливо сховатися",
     "program_management_unable_to_hide_desc": "Це остання видима програма, і принаймні одна програма має бути видимою.",
     "CL_CF_FM_set_deadline": "Встановіть крайній термін",
-    "CL_CF_FM_expiry_date_must_be_selected": "Потрібно вибрати термін придатності"
+    "CL_CF_FM_expiry_date_must_be_selected": "Потрібно вибрати термін придатності",
+    "CL_CF_FM_add_custom_food_desc": "Додайте новий індивідуальний елемент",
+    "CL_CF_FM_delete_selected_items": "Видалити вибрані елементи",
+    "CL_CF_FM_delete_selected": "Видалити вибране"
 }
