--- a/language/i18n_vi.json
+++ b/language/i18n_vi.json
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "Không thể ẩn",
     "program_management_unable_to_hide_desc": "Đây là chương trình cuối cùng có thể nhìn thấy và ít nhất một chương trình phải được giữ ở chế độ hiển thị.",
     "CL_CF_FM_set_deadline": "Đặt thời hạn",
-    "CL_CF_FM_expiry_date_must_be_selected": "Ngày hết hạn phải được chọn"
+    "CL_CF_FM_expiry_date_must_be_selected": "Ngày hết hạn phải được chọn",
+    "CL_CF_FM_add_custom_food_desc": "Thêm một mục tùy chỉnh mới",
+    "CL_CF_FM_delete_selected_items": "Xóa các mục đã chọn",
+    "CL_CF_FM_delete_selected": "Xóa mục đã chọn"
 }
