--- a/language/i18n_el.json
+++ b/language/i18n_el.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Βεβαιωθείτε ότι το bluetooth είναι ενεργοποιημένο.",
     "CL_DV_PIND_accessory_firmware_update": "Ενημέρωση υλικολογισμικού αξεσουάρ",
     "CL_CF_CS_ble_scan_not_list": "Εάν η συσκευή σας δεν εμφανίζεται στη λίστα, μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για αναζήτηση ξανά ή να κάνετε κλικ στο «ΕΠΟΜΕΝΟ» για να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
-    "CL_CF_CS_ble_scan_have_not_found": "Δεν βρήκαμε καμία συσκευή στο bluetooth. Μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για αναζήτηση ξανά ή να κάνετε κλικ στο «ΕΠΟΜΕΝΟ» για να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
+    "CL_CF_CS_ble_scan_have_not_found": "Δεν βρήκαμε καμία συσκευή στο bluetooth. Μπορείτε να κάνετε κλικ στο «ΠΡΟΣΠΑΘΗΣΤΕ ΞΑΝΑ» για να αναζητήσετε ξανά ή να διαμορφώσετε το δίκτυο με άλλο τρόπο.",
     "CL_DV_WM_pump_cleaning": "Αντλία καθαρισμού...",
     "CL_DV_WM_autodoes_tip": "Ενεργοποιήστε αυτήν τη λειτουργία και η συσκευή σας θα διανέμει έξυπνα απορρυπαντικό και μαλακτικό ενώ πλένετε τα ρούχα σας.",
     "CL_DV_WM_detergent_department_key": "ΘΗΚΗ ΑΠΟΡΡΥΠΑΝΤΙΚΟΥ",
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "Δεν είναι δυνατή η απόκρυψη",
     "program_management_unable_to_hide_desc": "Αυτό είναι το τελευταίο ορατό πρόγραμμα και τουλάχιστον ένα πρόγραμμα πρέπει να παραμένει ορατό.",
     "CL_CF_FM_set_deadline": "Ορίστε μια προθεσμία",
-    "CL_CF_FM_expiry_date_must_be_selected": "Πρέπει να επιλεγεί η ημερομηνία λήξης"
+    "CL_CF_FM_expiry_date_must_be_selected": "Πρέπει να επιλεγεί η ημερομηνία λήξης",
+    "CL_CF_FM_add_custom_food_desc": "Προσθέστε ένα νέο προσαρμοσμένο στοιχείο",
+    "CL_CF_FM_delete_selected_items": "Διαγραφή επιλεγμένων αντικειμένων",
+    "CL_CF_FM_delete_selected": "Διαγραφή επιλεγμένων"
 }
