--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "مطمئن شوید که بلوتوث شما روشن است.",
     "CL_DV_PIND_accessory_firmware_update": "به روز رسانی سیستم عامل لوازم جانبی",
     "CL_CF_CS_ble_scan_not_list": "اگر دستگاه شما در لیست نیست، می‌توانید برای جستجوی دوباره روی «امتحان مجدد» کلیک کنید، یا برای پیکربندی شبکه به روش دیگری روی «بعدی» کلیک کنید.",
-    "CL_CF_CS_ble_scan_have_not_found": "ما هیچ دستگاهی در بلوتوث پیدا نکرده‌ایم. می‌توانید برای جستجوی دوباره روی «امتحان مجدد» کلیک کنید، یا برای پیکربندی شبکه به روش دیگری روی «بعدی» کلیک کنید.",
+    "CL_CF_CS_ble_scan_have_not_found": "ما هیچ دستگاهی در بلوتوث پیدا نکردیم. می‌توانید برای جستجوی دوباره روی «تلاش مجدد» کلیک کنید یا شبکه را به روش دیگری پیکربندی کنید.",
     "CL_DV_WM_pump_cleaning": "پمپ نظافت ...",
     "CL_DV_WM_autodoes_tip": "این ویژگی را فعال کنید و دستگاه شما به طور هوشمندانه مواد شوینده و نرم کننده پارچه را در حین شستن لباس ها پخش می کند.",
     "CL_DV_WM_detergent_department_key": "محفظه مواد شوینده",
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "قادر به پنهان کردن نیست",
     "program_management_unable_to_hide_desc": "این آخرین برنامه قابل مشاهده است و حداقل یک برنامه باید قابل مشاهده باشد.",
     "CL_CF_FM_set_deadline": "یک ضرب الاجل تعیین کنید",
-    "CL_CF_FM_expiry_date_must_be_selected": "تاریخ انقضا باید انتخاب شود"
+    "CL_CF_FM_expiry_date_must_be_selected": "تاریخ انقضا باید انتخاب شود",
+    "CL_CF_FM_add_custom_food_desc": "یک مورد سفارشی جدید اضافه کنید",
+    "CL_CF_FM_delete_selected_items": "موارد انتخاب شده را حذف کنید",
+    "CL_CF_FM_delete_selected": "حذف انتخاب شده"
 }
