--- a/language/i18n_fr.json
+++ b/language/i18n_fr.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Assurez-vous que votre Bluetooth est activé.",
     "CL_DV_PIND_accessory_firmware_update": "Mise à jour du firmware des accessoires",
     "CL_CF_CS_ble_scan_not_list": "Si votre appareil n'est pas répertorié, vous pouvez cliquer sur « RÉESSAYER » pour effectuer une nouvelle recherche ou cliquer sur « SUIVANT » pour configurer le réseau d'une autre manière.",
-    "CL_CF_CS_ble_scan_have_not_found": "Nous n'avons trouvé aucun appareil compatible Bluetooth. Vous pouvez cliquer sur « RÉESSAYER » pour effectuer une nouvelle recherche ou cliquer sur « SUIVANT » pour configurer le réseau d'une autre manière.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nous n'avons trouvé aucun appareil sur bluetooth. Vous pouvez cliquer sur 'TRY AGAIN' pour effectuer une nouvelle recherche, ou configurer le réseau d'une autre manière.",
     "CL_DV_WM_pump_cleaning": "Pompe de nettoyage...",
     "CL_DV_WM_autodoes_tip": "Activez cette fonction et votre appareil distribuera intelligemment du détergent et de l'assouplissant pendant que vous faites votre lessive.",
     "CL_DV_WM_detergent_department_key": "COMPARTIMENT À DÉTERGENT",
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "Impossible de se cacher",
     "program_management_unable_to_hide_desc": "Il s'agit du dernier programme visible et au moins un programme doit rester visible.",
     "CL_CF_FM_set_deadline": "Fixer une date limite",
-    "CL_CF_FM_expiry_date_must_be_selected": "La date d'expiration doit être sélectionnée"
+    "CL_CF_FM_expiry_date_must_be_selected": "La date d'expiration doit être sélectionnée",
+    "CL_CF_FM_add_custom_food_desc": "Ajouter un nouvel élément personnalisé",
+    "CL_CF_FM_delete_selected_items": "Supprimer les éléments sélectionnés",
+    "CL_CF_FM_delete_selected": "Supprimer la sélection"
 }
