--- a/language/i18n_hi.json
+++ b/language/i18n_hi.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "सुनिश्चित करें कि आपका ब्लूटूथ चालू है।",
     "CL_DV_PIND_accessory_firmware_update": "सहायक उपकरण फर्मवेयर अद्यतन",
     "CL_CF_CS_ble_scan_not_list": "यदि आपका डिवाइस सूचीबद्ध नहीं है, तो आप दोबारा खोजने के लिए 'पुनः प्रयास करें' पर क्लिक कर सकते हैं, या नेटवर्क को किसी अन्य तरीके से कॉन्फ़िगर करने के लिए 'अगला' पर क्लिक कर सकते हैं।",
-    "CL_CF_CS_ble_scan_have_not_found": "हमें ब्लूटूथ पर कोई डिवाइस नहीं मिली है। आप दोबारा खोजने के लिए 'पुनः प्रयास करें' पर क्लिक कर सकते हैं, या किसी अन्य तरीके से नेटवर्क कॉन्फ़िगर करने के लिए 'अगला' पर क्लिक कर सकते हैं।",
+    "CL_CF_CS_ble_scan_have_not_found": "हमें ब्लूटूथ पर कोई डिवाइस नहीं मिली है। आप फिर से खोजने के लिए 'पुनः प्रयास करें' पर क्लिक कर सकते हैं, या किसी अन्य तरीके से नेटवर्क कॉन्फ़िगर कर सकते हैं।",
     "CL_DV_WM_pump_cleaning": "सफाई पंप...",
     "CL_DV_WM_autodoes_tip": "इस सुविधा को सक्षम करें और जब आप कपड़े धो रहे होंगे, तो आपका उपकरण स्मार्ट तरीके से डिटर्जेंट और फैब्रिक सॉफ़्नर वितरित करेगा।",
     "CL_DV_WM_detergent_department_key": "डिटर्जेंट कम्पार्टमेंट",
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "छिपाने में असमर्थ",
     "program_management_unable_to_hide_desc": "यह अंतिम दृश्यमान कार्यक्रम है और कम से कम एक कार्यक्रम दृश्यमान रखा जाना चाहिए।",
     "CL_CF_FM_set_deadline": "समय सीमा निर्धारित करें",
-    "CL_CF_FM_expiry_date_must_be_selected": "समाप्ति तिथि का चयन करना आवश्यक है"
+    "CL_CF_FM_expiry_date_must_be_selected": "समाप्ति तिथि का चयन करना आवश्यक है",
+    "CL_CF_FM_add_custom_food_desc": "नया अनुकूलित आइटम जोड़ें",
+    "CL_CF_FM_delete_selected_items": "चयनित आइटम हटाएं",
+    "CL_CF_FM_delete_selected": "चयनित को हटाओ"
 }
