--- a/language/i18n_it.json
+++ b/language/i18n_it.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Assicurati che il Bluetooth sia attivato.",
     "CL_DV_PIND_accessory_firmware_update": "Aggiornamento firmware accessorio",
     "CL_CF_CS_ble_scan_not_list": "Se il tuo dispositivo non è presente nell'elenco, puoi cliccare su \"RIPROVA\" per effettuare una nuova ricerca oppure cliccare su \"AVANTI\" per configurare la rete in un altro modo.",
-    "CL_CF_CS_ble_scan_have_not_found": "Non abbiamo trovato alcun dispositivo tramite Bluetooth. Puoi cliccare su \"RIPROVA\" per effettuare una nuova ricerca oppure cliccare su \"AVANTI\" per configurare la rete in un altro modo.",
+    "CL_CF_CS_ble_scan_have_not_found": "Non è stato trovato alcun dispositivo su bluetooth. È possibile fare clic su 'TRY AGAIN' per effettuare una nuova ricerca o configurare la rete in un altro modo.",
     "CL_DV_WM_pump_cleaning": "Pompa di pulizia...",
     "CL_DV_WM_autodoes_tip": "Abilitando questa funzione, il tuo dispositivo erogherà in modo intelligente detersivo e ammorbidente mentre fai il bucato.",
     "CL_DV_WM_detergent_department_key": "VANO DETERSIVO",
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "Impossibile nascondersi",
     "program_management_unable_to_hide_desc": "Questo è l'ultimo programma visibile e almeno un programma deve essere mantenuto visibile.",
     "CL_CF_FM_set_deadline": "Imposta una scadenza",
-    "CL_CF_FM_expiry_date_must_be_selected": "La data di scadenza deve essere selezionata"
+    "CL_CF_FM_expiry_date_must_be_selected": "La data di scadenza deve essere selezionata",
+    "CL_CF_FM_add_custom_food_desc": "Aggiungi un nuovo articolo personalizzato",
+    "CL_CF_FM_delete_selected_items": "Elimina gli elementi selezionati",
+    "CL_CF_FM_delete_selected": "Elimina selezionato"
 }
