--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "確保您的藍牙已開啟。",
     "CL_DV_PIND_accessory_firmware_update": "配件韌體更新",
     "CL_CF_CS_ble_scan_not_list": "如果您的裝置未列出，您可以按一下「重試」重新搜索，或按一下「下一步」以其他方式設定網路。",
-    "CL_CF_CS_ble_scan_have_not_found": "我們尚未在藍牙上找到任何裝置。",
+    "CL_CF_CS_ble_scan_have_not_found": "我們還沒有找到任何藍牙設備。您可以點擊「重试」重新搜索，或以其他方式配置網路。",
     "CL_DV_WM_pump_cleaning": "清洗幫浦...",
     "CL_DV_WM_autodoes_tip": "啟用此功能，您的設備將在您洗衣服時智慧地分配洗滌劑和織物柔軟劑。",
     "CL_DV_WM_detergent_department_key": "洗滌劑室",
@@ -4267,5 +4267,8 @@
     "program_management_unable_to_hide": "無法隱藏",
     "program_management_unable_to_hide_desc": "這是最後一個可見程序，並且至少有一個程序必須保持可見。",
     "CL_CF_FM_set_deadline": "設定截止日期",
-    "CL_CF_FM_expiry_date_must_be_selected": "必須選擇到期日"
+    "CL_CF_FM_expiry_date_must_be_selected": "必須選擇到期日",
+    "CL_CF_FM_add_custom_food_desc": "新增的客製化項目",
+    "CL_CF_FM_delete_selected_items": "刪除所選項目",
+    "CL_CF_FM_delete_selected": "刪除所選內容"
 }
