--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Bluetooth қосулы екеніне көз жеткізіңіз.",
     "CL_DV_PIND_accessory_firmware_update": "Қосымша микробағдарламаны жаңарту",
     "CL_CF_CS_ble_scan_not_list": "Құрылғыңыз тізімде жоқ болса, қайта іздеу үшін «ҚАЙТА ОРЫНДАУ» түймесін басыңыз немесе желіні басқа жолмен конфигурациялау үшін «КЕЛЕСІ» түймесін басыңыз.",
-    "CL_CF_CS_ble_scan_have_not_found": "Біз bluetooth арқылы ешбір құрылғыны таппадық. Қайтадан іздеу үшін «ҚАЙТАЛАП КӨРУ» түймесін басыңыз немесе желіні басқа жолмен конфигурациялау үшін «КЕЛЕСІ» түймесін басыңыз.",
+    "CL_CF_CS_ble_scan_have_not_found": "Біз bluetooth арқылы ешбір құрылғыны таппадық. Қайта іздеу немесе желіні басқа жолмен конфигурациялау үшін «ҚАЙТА ОРЫНДАУ» түймесін басуға болады.",
     "CL_DV_WM_pump_cleaning": "Тазалау сорғы...",
     "CL_DV_WM_autodoes_tip": "Бұл мүмкіндікті қосыңыз, сонда құрылғы кір жуу кезінде жуғыш зат пен мата жұмсартқышты ақылды түрде таратады.",
     "CL_DV_WM_detergent_department_key": "ЖҰУ ЗАТ БӨЛІМІ",
@@ -4267,5 +4267,10 @@
     "program_management_unable_to_hide": "Жасыру мүмкін емес",
     "program_management_unable_to_hide_desc": "Бұл соңғы көрінетін бағдарлама және кем дегенде бір бағдарлама көрінетін болуы керек.",
     "CL_CF_FM_set_deadline": "Мерзімді белгілеңіз",
-    "CL_CF_FM_expiry_date_must_be_selected": "Жарамдылық мерзімін таңдау керек"
+    "CL_CF_FM_expiry_date_must_be_selected": "Жарамдылық мерзімін таңдау керек",
+    "CL_CF_FM_add_custom_food_desc": "Жаңа теңшелген элементті қосыңыз",
+    "CL_CF_FM_delete_selected_items": "Таңдалған элементтерді жою",
+    "CL_CF_FM_delete_selected": "Таңдалғанды ​​жою",
+    "CL_DV_HOB_residual_heat_content": "Пісіру алаңы әлі ыстық. Оған қол тигізбеу үшін абай болыңыз.",
+    "CL_CF_FM_add_custom_food": "Кітапханаға кірмейтін тағамды қосыңыз"
 }
