--- a/language/i18n_da.json
+++ b/language/i18n_da.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Sørg for, at din bluetooth er tændt.",
     "CL_DV_PIND_accessory_firmware_update": "Opdatering af tilbehørsfirmware",
     "CL_CF_CS_ble_scan_not_list": "Hvis din enhed ikke er på listen, kan du klikke på 'PRØV IGEN' for at søge igen, eller klik på 'NÆSTE' for at konfigurere netværket på en anden måde.",
-    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke fundet nogen enhed på bluetooth. Du kan klikke på 'PRØV IGEN' for at søge igen, eller klik på 'NÆSTE' for at konfigurere netværket på en anden måde.",
+    "CL_CF_CS_ble_scan_have_not_found": "Vi har ikke fundet nogen enhed på Bluetooth. Du kan klikke på 'PRØV IGEN' for at søge igen eller konfigurere netværket på en anden måde.",
     "CL_DV_WM_pump_cleaning": "Rengøring af pumpe...",
     "CL_DV_WM_autodoes_tip": "Aktiver denne funktion, og din enhed dispenserer smart vaskemiddel og skyllemiddel, mens du vasker.",
     "CL_DV_WM_detergent_department_key": "RUM TIL VASKEMIDDEL",
@@ -4267,5 +4267,10 @@
     "program_management_unable_to_hide": "Kan ikke gemme sig",
     "program_management_unable_to_hide_desc": "Dette er det sidste synlige program, og mindst ét ​​program skal holdes synligt.",
     "CL_CF_FM_set_deadline": "Sæt en deadline",
-    "CL_CF_FM_expiry_date_must_be_selected": "Udløbsdato skal vælges"
+    "CL_CF_FM_expiry_date_must_be_selected": "Udløbsdato skal vælges",
+    "CL_CF_FM_add_custom_food_desc": "Tilføj et nyt tilpasset element",
+    "CL_CF_FM_delete_selected_items": "Slet valgte elementer",
+    "CL_CF_FM_delete_selected": "Slet valgte",
+    "CL_DV_HOB_residual_heat_content": "Kogezonen er stadig varm. Pas på ikke at røre ved den.",
+    "CL_CF_FM_add_custom_food": "Tilføj mad, der ikke er inkluderet i biblioteket"
 }
