--- a/language/i18n_he.json
+++ b/language/i18n_he.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "ודא שה-Bluetooth שלך מופעל.",
     "CL_DV_PIND_accessory_firmware_update": "עדכון קושחת אביזרים",
     "CL_CF_CS_ble_scan_not_list": "אם המכשיר שלך אינו מופיע ברשימה, תוכל ללחוץ על 'נסה שוב' כדי לחפש שוב, או ללחוץ על 'הבא' כדי להגדיר את הרשת בדרך אחרת.",
-    "CL_CF_CS_ble_scan_have_not_found": "לא מצאנו שום מכשיר ב-Bluetooth. אתה יכול ללחוץ על 'נסה שוב' כדי לחפש שוב, או ללחוץ על 'הבא' כדי להגדיר את הרשת בדרך אחרת.",
+    "CL_CF_CS_ble_scan_have_not_found": "לא מצאנו שום מכשיר ב-Bluetooth. אתה יכול ללחוץ על 'נסה שוב' כדי לחפש שוב, או להגדיר את הרשת בדרך אחרת.",
     "CL_DV_WM_pump_cleaning": "משאבת ניקוי...",
     "CL_DV_WM_autodoes_tip": "הפעל תכונה זו והמכשיר שלך יוציא בצורה חכמה חומר ניקוי ומרכך כביסה בזמן שאתה מכבס.",
     "CL_DV_WM_detergent_department_key": "תא חומרי ניקוי",
@@ -4267,5 +4267,10 @@
     "program_management_unable_to_hide": "לא מצליח להסתיר",
     "program_management_unable_to_hide_desc": "זוהי התוכנית הגלויה האחרונה ולפחות תוכנית אחת חייבת להיות גלויה.",
     "CL_CF_FM_set_deadline": "קבע תאריך יעד",
-    "CL_CF_FM_expiry_date_must_be_selected": "יש לבחור תאריך תפוגה"
+    "CL_CF_FM_expiry_date_must_be_selected": "יש לבחור תאריך תפוגה",
+    "CL_CF_FM_add_custom_food_desc": "הוסף פריט מותאם אישית חדש",
+    "CL_CF_FM_delete_selected_items": "מחק פריטים נבחרים",
+    "CL_CF_FM_delete_selected": "מחק את נבחרות",
+    "CL_DV_HOB_residual_heat_content": "אזור הבישול עדיין חם. היזהר לא לגעת בו.",
+    "CL_CF_FM_add_custom_food": "הוסף מזון שאינו כלול בספרייה"
 }
