--- a/language/i18n_sl.json
+++ b/language/i18n_sl.json
@@ -4153,7 +4153,7 @@
     "CL_DV_PIND_update_blue_tooth": "Preverite, ali je vaš bluetooth vklopljen.",
     "CL_DV_PIND_accessory_firmware_update": "Posodobitev vdelane programske opreme dodatne opreme",
     "CL_CF_CS_ble_scan_not_list": "Če vaša naprava ni na seznamu, lahko kliknete \"Poskusite znova\" za ponovno iskanje ali kliknete \"NAPREJ\" za drugačno konfiguracijo omrežja.",
-    "CL_CF_CS_ble_scan_have_not_found": "Na bluetoothu nismo našli nobene naprave. Za ponovno iskanje lahko kliknete »POSKUSI ZNOVA« ali kliknete »NAPREJ«, da omrežje konfigurirate na drug način.",
+    "CL_CF_CS_ble_scan_have_not_found": "Nismo našli nobene naprave z bluetoothom. Za ponovno iskanje lahko kliknete »POSKUSI ZNOVA« ali konfigurirate omrežje na drug način.",
     "CL_DV_WM_pump_cleaning": "Črpalka za čiščenje ...",
     "CL_DV_WM_autodoes_tip": "Omogočite to funkcijo in vaša naprava bo pametno dozirala detergent in mehčalec med pranjem perila.",
     "CL_DV_WM_detergent_department_key": "PREDELEK ZA DETERGENT",
@@ -4267,5 +4267,10 @@
     "program_management_unable_to_hide": "Ni mogoče skriti",
     "program_management_unable_to_hide_desc": "To je zadnji viden program in vsaj en program mora ostati viden.",
     "CL_CF_FM_set_deadline": "Določite rok",
-    "CL_CF_FM_expiry_date_must_be_selected": "Izbrati je treba datum poteka"
+    "CL_CF_FM_expiry_date_must_be_selected": "Izbrati je treba datum poteka",
+    "CL_CF_FM_add_custom_food_desc": "Dodajte nov element po meri",
+    "CL_CF_FM_delete_selected_items": "Izbriši izbrane elemente",
+    "CL_CF_FM_delete_selected": "Izbriši izbrano",
+    "CL_DV_HOB_residual_heat_content": "Kuhalno polje je še vroče. Pazite, da se ga ne dotaknete.",
+    "CL_CF_FM_add_custom_food": "Dodajte hrano, ki ni vključena v knjižnico"
 }
